[added] resume: rewored employment and reordered programming lang

--- a/master_resume.tex
+++ b/master_resume.tex
@@ -71,6 +71,7 @@ www.github.com/wisehackermonkey
     	\subsubsection{Got client's computers up and running, maintained office computers in tip top shape}
         \subsubsection{Spearheaded a redesign prototyped for a handheld medical device, Cirucit layout, and design, lead designer }
     	\subsubsection{Engineered and built a physical prototype to improve the company's medical device}
+    	\subsubsection{Took Inititive to create a 45+ page process documation document, which badly need documentation to imporove the sintall process for future employees to install software, and image computers from scratch }
 
     	\subsubsection{Tactfully solved client's complicated issues over the phone}
     	
@@ -79,26 +80,29 @@ www.github.com/wisehackermonkey
 	        \vspace{-2mm}
 	        \subsubsection{Built a professional grade web app backend, improved our production server deployment pattern}
             \subsubsection{Pushed my team to improve our git commit strategy and commit regularity, unit testing using Rspec}
-            \subsubsection{Created a Docker implementation for deployment, learned the Ruby language in 2 weeks for the job}
+            \subsubsection{Enchanced my teams development and deployment by creating a custom Docker image which increased ease of deployment, Got up to speed with the ruby languages under 2 weeks}
             
     \subsection{IT Technician, Santa Rosa Junior College (part-time)}Nov 2017 – Dec 2017
         
         \vspace{-2mm}
+    	\subsubsection{Assistaed with solving difficult installation issues for important and fustreated faculty with there broaken pc, and printers  }
     	\subsubsection{Fielded computer diagnostics, printers and laptops }
     	\subsubsection{Imaged Dell computers : laptop and desktops }
-    	\subsubsection{Worked with a team to help customers in a friendly responsible manner}
+    	\subsubsection{Created checklists to ensure proper and consistent software install procedures}
 
 \section{Expertise}
+		\subsection{Languages/Frameworks/Tools}
+		JavaScript, Python, Node.js, Docker
 		\subsection{Languages}
-		JavaScript, Ruby/Rails, Python, Bash,  C\#, HTML, CSS, C++
+		Bash,  C\#, HTML, CSS, , Ruby/Rails, C++
 		\vspace{-2mm}
 		
 		\subsection{Software/Tools}
-		Linux Command-line, Node.js,Rails, Git, Docker, MongoDB, SQL
+		Linux Command-line,Rails, Git, MongoDB, SQL
 		\vspace{-3mm}
-		\subsection{Skills}Photoshop/Illustrator, Photography, Video Editing, Product Design/Prototyping, 
+		\subsection{Skills}Photoshop/Illustrator, Photography, Video Editing
 		\vspace{-3mm}
-		\subsubsection{ Unity Game Development, Circuit board design, Excel, MS Word, Google Docs}
+		\subsubsection{Product Design/Prototyping, Circuit board design,  Unity Game Development, Excel, MS Word, Google Docs}
 		\vspace{-3mm}
     		
     		    		
