[added] hackathon, removed college start date

--- a/master_resume.tex
+++ b/master_resume.tex
@@ -110,7 +110,7 @@ www.github.com/wisehackermonkey
         \subsection{Club President  Computer Science Club}  (2018)
         \vspace{-2mm}   
          
-        \subsection{Santa Rosa Junior College} August 2015 – Present 
+        \subsection{Santa Rosa Junior College} Present - 2023 
         \vspace{-2mm}
             \subsubsection{Pursuing a B.S. in Computer Science}
 \section{Personal Projects}
@@ -119,9 +119,13 @@ www.github.com/wisehackermonkey
     	\vspace{-3mm}
 		\subsubsection{Controlled over Bluetooth from a computer using software written in C/C++}
 		
-% 	\subsection{Text2buy} Hackathon 4th place prize - SFhacks 2018
-%     	\vspace{-3mm}
-% 		\subsubsection{A Craigslist  like posting app that only uses SMS texts, for places where high bandwidth mobile data is not available}
+	\subsection{Student Parking Lot Tracker} Hackathon 1th place prize College Track - North Bay Make-A-Thon 2017
+    	\vspace{-3mm}
+		\subsubsection{Gave students a way to view the number of available parking spots left in the always packed parking garage}
+		
+	\subsection{Text2buy} Hackathon 4th place prize - SFhacks 2018
+    	\vspace{-3mm}
+		\subsubsection{A Craigslist  like posting app that only uses SMS texts, for places where high bandwidth mobile data is not available}
 		\pagenumbering{gobble}
 		
 \end{document}
