[fix] page number issue

--- a/master_resume.tex
+++ b/master_resume.tex
@@ -90,6 +90,7 @@ www.github.com/wisehackermonkey
     	\subsubsection{Imaged Dell computers : laptop and desktops }
     	\subsubsection{Created checklists to ensure proper and consistent software install procedures}
 
+		\pagenumbering{gobble}
 \section{Expertise}
 		\subsection{Languages/Frameworks/Tools}
 		JavaScript, Python, Node.js, Docker
