--- a/master_resume.tex
+++ b/master_resume.tex
@@ -1,3 +1,4 @@
+% version 6.0.1 20200706
 \documentclass{article}
 \usepackage{titlesec}
 \usepackage{titling}
@@ -68,10 +69,11 @@ www.github.com/wisehackermonkey
 	 \subsection{Tech Support, OchsLabs (part-time)} Nov 2019 – Mar 2020
         
         \vspace{-2mm}
-    	\subsubsection{Got client's computers up and running, maintained office computers in tip top shape}
-        \subsubsection{Spearheaded a redesign prototyped for a handheld medical device, Cirucit layout, and design, lead designer }
+        \subsubsection{Spearheaded a redesign prototyped for a handheld medical device, cirucit layout, and design, lead designer}
     	\subsubsection{Engineered and built a physical prototype to improve the company's medical device}
-    	\subsubsection{Took Inititive to create a 45+ page process documation document, which badly need documentation to imporove the sintall process for future employees to install software, and image computers from scratch }
+		\subsubsection{Improved onboarding procedures, by creating large process documents, which removed guesswork, and made it easier to install the companies old, complicated , undocumented software installs}
+    	\subsubsection{Managed and maintained office computers in installing, upgreading, diagnostics}
+			% Took Inititive to create a 45+ page process documation document, which badly need documentation to imporove the sintall process for future employees to install software, and image computers from scratch }
 
     	\subsubsection{Tactfully solved client's complicated issues over the phone}
     	
@@ -95,11 +97,11 @@ www.github.com/wisehackermonkey
 		\subsection{Languages/Frameworks/Tools}
 		JavaScript, Python, Node.js, Docker
 		\subsection{Languages}
-		Bash,  C\#, HTML, CSS, , Ruby/Rails, C++
+		Bash, HTML, CSS,  C\#, Ruby/Rails, C++
 		\vspace{-2mm}
 		
 		\subsection{Software/Tools}
-		Linux Command-line,Rails, Git, MongoDB, SQL
+		Linux Command-line,Rails, Git, MongoDB, SQL, Golang, Flask, Express
 		\vspace{-3mm}
 		\subsection{Skills}Photoshop/Illustrator, Photography, Video Editing
 		\vspace{-3mm}
