[added] open source, created class taken

--- a/master_resume.tex
+++ b/master_resume.tex
@@ -107,10 +107,20 @@ www.github.com/wisehackermonkey
 		\vspace{-3mm}
 		\subsubsection{Product Design/Prototyping, Circuit board design,  Unity Game Development, Excel, MS Word, Google Docs}
 		\vspace{-3mm}
-    		
+
+    	\subsection{Open Source} p5.collide2d.js: collision detection library
+		\subsubsection{Added major feature that converts point style to vector style, which opened up a interface to use the library using vectors, created a CI/CD pipeline using github actions to automaticly package up the code on every code change, introduced new documentation, and ability to use CDN's with the library instead of downloading it from github manually every time a user wanted to use the library }
+		\vspace{-3mm}
+			
     		    		
 	\section{Education}
         \subsection{Club President  Computer Science Club}  (2018)
+        \vspace{-2mm}   
+		 
+		\subsection{Introduction to Linux}  (2018)
+        \vspace{-2mm}   
+
+		\subsection{Cisco Networking}  (2016)
         \vspace{-2mm}   
          
         \subsection{Santa Rosa Junior College} Present - 2023 
