[added] old jobs

--- a/master_resume.tex
+++ b/master_resume.tex
@@ -78,7 +78,7 @@ www.github.com/wisehackermonkey
     	\subsubsection{Tactfully solved client's complicated issues over the phone}
     	
 
-    \subsection{Full Stack Developer, Wineglassmarketing}Feb 2019 - June 2019
+    \subsection{Full Stack Developer, Wineglassmarketing} Feb 2019 - June 2019
 	        \vspace{-2mm}
 	        \subsubsection{Built a professional grade web app backend, improved our production server deployment pattern}
             \subsubsection{Pushed my team to improve our git commit strategy and commit regularity, unit testing using Rspec}
@@ -91,7 +91,33 @@ www.github.com/wisehackermonkey
     	\subsubsection{Fielded computer diagnostics, printers and laptops }
     	\subsubsection{Imaged Dell computers : laptop and desktops }
     	\subsubsection{Created checklists to ensure proper and consistent software install procedures}
+    	
+    \subsection{Computer Repair Technician, Mobile Kangaroo} Nov 2016 – Mar 2017
+        
+        \vspace{-2mm}
+        \subsubsection{Performed Mac, Windows, OS installation, Software/Hardware/Network diagnostic, and repairs}
+    	\subsubsection{Delivered customer service}
+    	\subsubsection{Worked with a Point of Sales System}
+	\subsection{Wine Bottler, Fairwinds Estate Winery (part-time)} May 2017 – July 2017
+		\vspace{-2mm}
+		\subsubsection{Balanced the work flow when bottling had hiccups}
+		\subsubsection{Efficiently put bottles onto fast moving bottling line}
+		\subsubsection{Implemented orderly pattern boxes of wine onto pallets}
 
+	\subsection{Pool attendant, Lincoln Manor Association (part-time)} 2018
+		\vspace{-2mm}
+
+		\subsubsection{I greeted and Verified each guest was allowed to use the pool}
+		\subsubsection{I was responsible for the pool's setup, cleanliness, and chemical levels}
+		\subsubsection{I made sure pool rules were followed; Insuring every guest felt safe and welcome}
+
+	\subsection{Dishwasher, Wholefoods Sonoma (part-time)} January 2019 – Feb 2019
+		\vspace{-2mm}
+		\subsubsection{Ability to multitask and follow instructions under pressure}
+		\subsubsection{Maintained consistent hours, sacrificed personal time to get on top of work}
+		\subsubsection{Washed dishes and other items for cooks and servers in a timely manner}
+		\subsubsection{Established professional working rapport with kitchen staff}
+		\subsubsection{Sustained a thoroughly clean work area}
 		\pagenumbering{gobble}
 \section{Expertise}
 		\subsection{Languages/Frameworks/Tools}
@@ -131,7 +157,9 @@ www.github.com/wisehackermonkey
 	\subsection{Wall-E Robot}Small Bluetooth Controlled Tank Bot
     	\vspace{-3mm}
 		\subsubsection{Controlled over Bluetooth from a computer using software written in C/C++}
-		
+	\subsection{Packet Radio} Radio Data Transmitter
+    	\vspace{-3mm}
+		\subsubsection{ Serial data communication up to a mile over radio waves using two Arduino microcontrollers}
 	\subsection{Student Parking Lot Tracker} Hackathon 1th place prize College Track - North Bay Make-A-Thon 2017
     	\vspace{-3mm}
 		\subsubsection{Gave students a way to view the number of available parking spots left in the always packed parking garage}
