[added] two contract jobs, twisted Feeelds, and Skills section

--- a/master_resume.tex
+++ b/master_resume.tex
@@ -1,4 +1,4 @@
-% version 6.1.0 20200706
+% version 6.2.0 20210427
 \documentclass{article}
 \usepackage{titlesec}
 \usepackage{titling}
@@ -64,28 +64,75 @@ www.github.com/wisehackermonkey
 
 
 \maketitle
+\section{Objective}
+    \subsection{Career opportunities to utilize my growing skills and passion in Software Development, Robotics and Product Design}
+\begin{flushleft}
 
+ \begin{tabular}{ |c|c|c| }
+ \hline
+JavaScript & Node.js & Unity3D Game Development\\
+Python & Docker & Photoshop/Illustrator  \\
+C\#/C++ & Linux & Product Design \\
+Arduino & GitHub & Circuit Board Design \\
+Bash & SQL & Raspberry Pi \\
+Ruby/Rails & MongoDB &   \\
+HTML/CSS &  Ruby  &   \\
+\hline
+\end{tabular}
+\end{flushleft}
 \section{Employment Experience}
-	 \subsection{Tech Support, OchsLabs (part-time)} Nov 2019 – Mar 2020
+     \subsection{Rapid Prototyping Engineer, Private Contractor} Dec 2020 – Feb 2021
         
         \vspace{-2mm}
-        \subsubsection{Spearheaded a redesign prototyped for a handheld medical device, cirucit layout, and design, lead designer}
-    	\subsubsection{Engineered and built a physical prototype to improve the company's medical device}
-		\subsubsection{Improved onboarding procedures, by creating large process documents, which removed guesswork, and made it easier to install the companies old, complicated , undocumented software installs}
-    	\subsubsection{Managed and maintained office computers in installing, upgreading, diagnostics}
-			% Took Inititive to create a 45+ page process documation document, which badly need documentation to imporove the sintall process for future employees to install software, and image computers from scratch }
-
-    	\subsubsection{Tactfully solved client's complicated issues over the phone}
+    	\subsubsection{Designed and build a self leveling RV bed}
+    	\subsubsection{Took the project from rudimentary design sketch to a fully functioning prototype}
+    	\subsubsection{Circuit Design, Arduino programming, Wood working, Hardware systems integration, 3d printing/modeling, created high quality,functional, and clean documentation}
     	
+    \subsection{Systems Administrator, Private Contractor} Dec 2020 – Feb 2021
+        
+        \vspace{-2mm}
+    	\subsubsection{MountainOS skillfully created a custom raspberry pi os image to be deployed at over 90 radio comminications instilations on top of mountens all over califoria}
+    	\subsubsection{Integrated multiple software tools, created working sd card image for consitant deployments}
+    	\subsubsection{Deep knoleage of Linux administraction, Raspberry pi software instilation, created high quality,functional, and clean documentation}
+	 
+    \subsection{Robotics Prototyping Engineering Intern} July 2020– Sept 2020
+            
+        \vspace{0mm}
+        Successfully made a hardware device field test ready, for a startup farm agtech company. Completed rapid prototyping and quick implementations of algorithms to test on the goats in the field.  Accomplishments include:
+        
+        \subsubsection{In 2 weeks, pushed the project forward passed the 90\% mark, and made the prototype field testable on live goats}
+        
+        \subsubsection{Wrote new algorithms, which had a direct and meaningful impact on the functionality of how the prototype interacted with the goats}
+        
+        \subsubsection{For important undocumented components, established functional and beautiful documentation, which aided in communication, and made the transition to a new team smooth and effortless}
+
+	 
+    \subsection{Tech Support, OchsLabs (part-time)} Nov 2019 – Mar 2020
+	    
+	    \vspace{0mm}
+    	Online Software Support position installing Low Energy Neurofeedback software on customer Windows machines. Built and maintained Windows images and troubleshot installation scripts while providing direct customer phone support. Accomplishments include:
+
+        \vspace{-2mm}
+        \subsubsection{Delivered on a special CEO requested project to rapidly prototype and build a Photonic stimulator using 3D printer and hand-built circuit boards. Led two-person team effort to design and build handheld medical device, circuit layout and design.}
+    	\subsubsection{Engineered and built a physical prototype to improve the company's medical device}
+		\subsubsection{Updated and revamped software installation documentation for easier maintenance and accessibility}
+    	\subsubsection{Provide in-house IT field support for company’s computers, printers and network}
 
     \subsection{Full Stack Developer, Wineglassmarketing} Feb 2019 - June 2019
-	        \vspace{-2mm}
-	        \subsubsection{Built a professional grade web app backend, improved our production server deployment pattern}
-            \subsubsection{Pushed my team to improve our git commit strategy and commit regularity, unit testing using Rspec}
-            \subsubsection{Enchanced my teams development and deployment by creating a custom Docker image which increased ease of deployment, Got up to speed with the ruby languages under 2 weeks}
             
+        \vspace{0mm}
+        Team Lead of Software Developer group that provided web back end application support. Built internal tools on different platform web back ends using Ruby on Rails for CMS platform migration. Accomplishments include:
+
+        \vspace{-2mm}
+        \subsubsection{Successful migration of legacy orders, marketing and operations applications to newer integrated CMS platforms. Migration included 500 Rspec tests.}
+        \subsubsection{Conversion of team to utilize GIT commit strategy and regularity; and unit testing using Rspec.}
+        \subsubsection{Continual improvements in web app backend production deployment process; reducing failure rate from 1 out of 10 to 1 out of 30 installation failures.}
+        
     \subsection{IT Technician, Santa Rosa Junior College (part-time)}Nov 2017 – Dec 2017
         
+        \vspace{0mm}
+        Provided field technician support for campus computers, laptops, printers and network. Provided end-user training and support for College Faculty. Created procedural checklists to improve the quality and consistency of software installation for all Field technicians.
+
         \vspace{-2mm}
     	\subsubsection{Assistaed with solving difficult installation issues for important and fustreated faculty with there broaken pc, and printers  }
     	\subsubsection{Fielded computer diagnostics, printers and laptops }
@@ -170,3 +217,4 @@ www.github.com/wisehackermonkey
 		\pagenumbering{gobble}
 		
 \end{document}
+
