[added] new tex

--- a/master_resume.tex
+++ b/master_resume.tex
@@ -1,4 +1,5 @@
 % version 6.2.0 20210427
+% version 6.1.0 20200706
 \documentclass{article}
 \usepackage{titlesec}
 \usepackage{titling}
@@ -127,6 +128,14 @@ HTML/CSS &  Ruby  &   \\
         \subsubsection{Successful migration of legacy orders, marketing and operations applications to newer integrated CMS platforms. Migration included 500 Rspec tests.}
         \subsubsection{Conversion of team to utilize GIT commit strategy and regularity; and unit testing using Rspec.}
         \subsubsection{Continual improvements in web app backend production deployment process; reducing failure rate from 1 out of 10 to 1 out of 30 installation failures.}
+        \subsubsection{Improved development and deployment efficiency be creating custom Docker images.}
+    \subsection{IT Technician, Santa Rosa Junior College} Nov 2017 – Dec 2017
+    
+            \vspace{0mm}
+
+    Provided field technician support for campus computers, laptops, printers and network. Provided end-user training and support for College Faculty. Created procedural checklists to improve the quality and consistency of software installation for all Field technicians.
+
+
         
     \subsection{IT Technician, Santa Rosa Junior College (part-time)}Nov 2017 – Dec 2017
         
@@ -199,11 +208,11 @@ HTML/CSS &  Ruby  &   \\
         \subsection{Santa Rosa Junior College} Present - 2023 
         \vspace{-2mm}
             \subsubsection{Pursuing a B.S. in Computer Science}
-\section{Personal Projects}
+\section{College Hackathons and Projects: 2017 - Ongoing}
 
 	\subsection{Wall-E Robot}Small Bluetooth Controlled Tank Bot
     	\vspace{-3mm}
-		\subsubsection{Controlled over Bluetooth from a computer using software written in C/C++}
+		\subsubsection{Small Bluetooth controlled tank BOT written in C/C++}
 	\subsection{Packet Radio} Radio Data Transmitter
     	\vspace{-3mm}
 		\subsubsection{ Serial data communication up to a mile over radio waves using two Arduino microcontrollers}
@@ -214,7 +223,12 @@ HTML/CSS &  Ruby  &   \\
 	\subsection{Text2buy} Hackathon 4th place prize - SFhacks 2018
     	\vspace{-3mm}
 		\subsubsection{A Craigslist  like posting app that only uses SMS texts, for places where high bandwidth mobile data is not available}
-		\pagenumbering{gobble}
 		
-\end{document}
+		\subsection{1st place College Track at North Bay Make-A-Thon 2017 for building Student Parking Lot Tracker app}
+\subsection{4th place SFHacks 2018 for Craiglist-like posting app that uses SMS texts for situations where connection to a high bandwidth mobile network is not available}
+\subsection{Open Source approved contributions towards P5JS collision detection library using vectors instead of points. CI with Github interaction}
 
+		
+		\pagenumbering{gobble}
+
+\end{document}
